--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -14,4 +14,5 @@
 
     <!-- Bootstrap core CSS -->
     <link href="../static/css/bootstrap.css" rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
+	<script src="../static/js/jkirby.js" th:src="@{/js/jkirby.js}"></script>
 </head>
