--- a/src/main/resources/templates/indiranks.html
+++ b/src/main/resources/templates/indiranks.html
@@ -29,7 +29,7 @@
                     <tr>
                         <td th:text="${personStat.count}">1</td>
                         <td th:text="${person.name}">Quy Nguyen</td>
-                        <td th:text="${person.school}">Seven Lakes High School</td>
+                        <td th:text="${person.team.school}">Seven Lakes High School</td>
                         <td th:text="${person.score}">120</td>
                     </tr>
                 </th:block>
@@ -52,7 +52,7 @@
                     <tr>
                         <td th:text="${personStat.count}">1</td>
                         <td th:text="${person.name}">Quy Nguyen</td>
-                        <td th:text="${person.school}">Seven Lakes High School</td>
+                        <td th:text="${person.team.school}">Seven Lakes High School</td>
                         <td th:text="${person.score}">120</td>
                     </tr>
                 </th:block>
