--- a/src/main/resources/templates/data/entry.html
+++ b/src/main/resources/templates/data/entry.html
@@ -1,24 +1,84 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-
-
-<head>
-    <div th:include="common/header :: common-header" th:remove="tag"/>
-    <link href="../static/css/login.css" rel="stylesheet" th:href="@{/css/login.css}"/>
-</head>
+<head th:replace="common/header :: common-header"/>
 
 <body>
-    <div th:replace="common/navbar :: common-navbar"/>
+<div th:replace="common/navbar :: common-navbar"/>
+<div class="container">
+    <form action="#" class="form-data" th:action="@{/data/entry}" th:object="${indiEntryDTO}" method="post">
+        <div class="text-center m-3">
+            <button class="btn btn-lg btn-success" type="submit">Submit</button>
+            <button class="btn btn-lg btn-success" type="reset">Reset</button>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <h4>Data Entry:</h4>
+                <table class="table table-striped table-hover" id="entrytable">
+                    <thead class="thead-dark">
+                    <!-- Filters -->
+                    <tr>
+                        <th scope="col">Filters</th>
+                        <th scope="col"><input id="teamnum" class="form-control" type="number" onchange="filter();"></th>
+                        <th scope="col"><input id="schoolname" class="form-control" type="text" onchange="filter();"></th>
+                        <th scope="col"><input id="studentname" class="form-control" type="text" onchange="filter();"></th>
+                        <th scope="col">N/A</th>
+                        <th scope="col">
+                            <select id="aon" class="form-control" onchange="filter();">
+                                <option value="All" selected>All</option>
+                                <option value="Advanced">Adv</option>
+                                <option value="Novice">Nov</option>
+                            </select>
+                        </th>
+                    </tr>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Team Number</th>
+                        <th scope="col">School Name</th>
+                        <th scope="col">Student Name</th>
+                        <th scope="col">Written Score</th>
+                        <th scope="col">Division</th>
+                    </tr>
+                    </thead>
+                    <tbody>
 
-    <form action="#" th:action="@{/data/entry}" th:object="${curTeam}" method="post">
-        <input type="text" th:field="*{school}" readonly/>
-        <td th:text="${#lists.size(individuals)}">[SSINI]</td>
-        <th:block th:each="indi, indiStat : *{individuals}">
-        </th:block>
+                    <th:block th:each="person, personStat : *{individuals}">
+                        <tr>
+                            <td th:text="${personStat.count}">1</td>
+                            <td th:text="${person.team.id}">73</td>
+                            <td th:text="${person.team.school}">Seven Lakes High School</td>
+                            <td th:text="${person.name}">Quy Nguyen</td>
+                            <td><input type="text" class="form-control" id="indv1" th:field="*{individuals[__${personStat.index}__].score}"/></td>
+                            <td th:text="${{person.division}}">Advanced</td>
+                        </tr>
+                    </th:block>
+                    </tbody>
+                    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+                </table>
+                <script>
+					function filter() {
+						var tn = $("#teamnum").val();
+						var sn = $("#schoolname").val();
+						var stn = $("#studentname").val();
+						var aon = $("#aon").val();
+						// Gets the filters from the inputs
+
+						// Goes through each row and checks to see if the info matches the filters
+						$("#entrytable tbody tr").each(function() {
+							var stdata = [];
+							$(this).children("td").each(function(i) {
+								stdata[i] = $(this).html();
+							});
+							if ((tn === "" || tn == stdata[1]) && (sn === "" || stdata[2].includes(sn)) && (stn === "" || stdata[3].includes(stn)) && (aon == "All" || stdata[5] == aon))
+								$(this).show();
+							else
+								$(this).hide();
+						});
+					}
+				</script>
+            </div>
+        </div>
     </form>
-</body>
-
-
+</div>
 </body>
 </html>
