--- a/src/main/resources/templates/data/entry.html
+++ b/src/main/resources/templates/data/entry.html
@@ -9,11 +9,13 @@
     <form action="#" class="form-data" th:action="@{/data/entry}" th:object="${indiEntryDTO}" method="post">
         <div class="text-center m-3">
             <button class="btn btn-lg btn-success" type="submit">Submit</button>
-            <button class="btn btn-lg btn-success" type="reset">Reset</button>
         </div>
         <div class="row">
             <div class="col-md-12">
                 <h4>Data Entry:</h4>
+                <div th:if="${#fields.hasErrors('*')}">
+                    <p class="text-center mb-0 text-danger">One or more invalid scores (range -80 to 240).</p>
+                </div>
                 <table class="table table-striped table-hover" id="entrytable">
                     <thead class="thead-dark">
                     <!-- Filters -->
@@ -48,7 +50,7 @@
                             <td th:text="${person.team.id}">73</td>
                             <td th:text="${person.team.school}">Seven Lakes High School</td>
                             <td th:text="${person.name}">Quy Nguyen</td>
-                            <td><input type="text" class="form-control" id="indv1" th:field="*{individuals[__${personStat.index}__].score}"/></td>
+                            <td><input type="text" class="form-control" th:style="${#fields.hasErrors('individuals[__${personStat.index}__].score')} ? 'background-color: #ff3e3e' : ''" th:field="*{individuals[__${personStat.index}__].score}"/></td>
                             <td th:text="${{person.division}}">Advanced</td>
                         </tr>
                     </th:block>
