--- a/src/main/resources/templates/progranks.html
+++ b/src/main/resources/templates/progranks.html
@@ -7,7 +7,7 @@
     <div th:replace="common/navbar :: common-navbar"/>
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h3 class="display-3">Team Leaderboards</h3>
+            <h3 class="display-3">Programming Leaderboards</h3>
             <p class="lead">Note: Leaderboards may not be 100% accurate and do not accurately reflect ties.</p>
         </div>
     </div>
@@ -21,7 +21,7 @@
                         <th scope="col">#</th>
                         <th scope="col">Team Number</th>
                         <th scope="col">Team School</th>
-                        <th scope="col">Team Score</th>
+                        <th scope="col">Programming Score</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -44,7 +44,7 @@
                         <th scope="col">#</th>
                         <th scope="col">Team Number</th>
                         <th scope="col">Team School</th>
-                        <th scope="col">Team Score</th>
+                        <th scope="col">Programming Score</th>
                     </tr>
                     </thead>
                     <tbody>
