--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -7,14 +7,15 @@
         <div class="navbar-collapse">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="/downloads">Downloads</a>
-                <a class="nav-item nav-link" href="/teamranks">Team Leaderboards</a>
+                <a class="nav-item nav-link" href="/progranks">Programming Leaderboards</a>
                 <a class="nav-item nav-link" href="/indiranks">Individual Leaderboards</a>
             </div>
         </div>
         <div class="navbar-nav navbar-right">
             <a sec:authorize="hasAuthority('ROLE_TEAM')" class="nav-item nav-link" href="/team/register">Team Registration</a>
             <a sec:authorize="hasAuthority('ROLE_DATA')" class="nav-item nav-link" href="/data/entry">Data Entry</a>
-            <a sec:authorize="hasAuthority('ROLE_ADMIN')" class="nav-item nav-link" href="/admin/settings">Admin Page</a>
+            <a sec:authorize="hasAuthority('ROLE_DATA')" class="nav-item nav-link" href="/data/teamranks">Total Leaderboards</a>
+            <!--<a sec:authorize="hasAuthority('ROLE_ADMIN')" class="nav-item nav-link" href="/admin/settings">Admin Page</a>-->
             <a sec:authorize="hasAuthority('ROLE_ADMIN')" class="nav-item nav-link" href="/h2/">Database Access</a>
             <div sec:authorize="isAuthenticated()">
                 <form th:action="@{/logout}" method="post" class="form-inline my-0">
