--- a/src/main/resources/templates/downloads.html
+++ b/src/main/resources/templates/downloads.html
@@ -10,10 +10,11 @@
             <h3 class="display-3">Downloads</h3>
             <p class="lead">If downloads appear to be stuck at 100%, wait 30-60 seconds, then ask for help.</p>
             <div class="btn-group" role="group" aria-label="Regular Downloads">
+                <a type="button" class="btn btn-warning-outline" href="/files/eclipse-inst-win64.exe" download>Eclipse</a>
                 <a type="button" class="btn btn-warning-outline" href="/files/jdk.exe" download>Java 8</a>
                 <a type="button" class="btn btn-warning-outline" href="/files/winrar.exe" download>WinRAR</a>
                 <a type="button" class="btn btn-warning-outline" href="/files/pc2.zip" download>PC<sup>2</sup></a>
-                <a type="button" class="btn btn-warning-outline" href="/files/dryrun.in" download>DryRun Data</a>
+                <a type="button" class="btn btn-warning-outline" href="/files/dryrun.dat" download>DryRun Data</a>
             </div>
             <div class="btn-group" role="group" aria-label="Contest Downloads">
                 <a type="button" class="btn btn-warning-outline" href="/files/contestdata.zip" download>Contest Data</a>
