--- a/src/main/resources/templates/downloads.html
+++ b/src/main/resources/templates/downloads.html
@@ -9,17 +9,19 @@
         <div class="container">
             <h3 class="display-3">Downloads</h3>
             <p class="lead">If downloads appear to be stuck at 100%, wait 30-60 seconds, then ask for help.</p>
-            <div class="btn-group" role="group" aria-label="Regular Downloads">
-                <a type="button" class="btn btn-warning-outline" href="/files/eclipse-inst-win64.exe" download>Eclipse</a>
+            <div class="btn-group" role="group" aria-label="Utility Downloads">
+                <a type="button" class="btn btn-warning-outline" href="/files/eclipse.exe" download>Eclipse</a>
+                <a type="button" class="btn btn-warning-outline" href="/files/intellij.exe" download>IntelliJ</a>
                 <a type="button" class="btn btn-warning-outline" href="/files/jdk.exe" download>Java 8</a>
-                <a type="button" class="btn btn-warning-outline" href="/files/winrar.exe" download>WinRAR</a>
                 <a type="button" class="btn btn-warning-outline" href="/files/pc2.zip" download>PC<sup>2</sup></a>
+                <a type="button" class="btn btn-warning-outline" href="/files/dryrun.pdf" download>DryRun</a>
                 <a type="button" class="btn btn-warning-outline" href="/files/dryrun.dat" download>DryRun Data</a>
             </div>
             <div class="btn-group" role="group" aria-label="Contest Downloads">
+                <a type="button" class="btn btn-warning-outline" href="/files/contestpacket.pdf" download>Contest</a>
                 <a type="button" class="btn btn-warning-outline" href="/files/contestdata.zip" download>Contest Data</a>
-                <a type="button" class="btn btn-warning-outline" href="/files/writtentest.pdf" download>Test Packet</a>
-                <a type="button" class="btn btn-warning-outline" href="/files/writtenkey.pdf" download>Test Key</a>
+                <a type="button" class="btn btn-warning-outline" href="/files/writtentest.pdf" download>Written Test</a>
+                <a type="button" class="btn btn-warning-outline" href="/files/writtenkey.rar" download>Test Key</a>
             </div>
         </div>
     </div>
