--- a/src/main/resources/templates/common/navbar.html
+++ b/src/main/resources/templates/common/navbar.html
@@ -1,33 +1,37 @@
 <!DOCTYPE html>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 
 <div th:fragment="common-navbar">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="/">Home</a>
+        <a class="navbar-brand" th:href="@{/}">Home</a>
         <div class="navbar-collapse">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="/downloads">Downloads</a>
-                <a class="nav-item nav-link" href="/progranks">Programming Leaderboards</a>
-                <a class="nav-item nav-link" href="/indiranks">Individual Leaderboards</a>
+                <a class="nav-item nav-link" th:href="@{/downloads}">Downloads</a>
+                <a class="nav-item nav-link" th:href="@{/progranks}">Programming Leaderboards</a>
+                <a class="nav-item nav-link" th:href="@{/indiranks}">Individual Leaderboards</a>
             </div>
         </div>
         <div class="navbar-nav navbar-right">
-            <a sec:authorize="hasAuthority('ROLE_TEAM')" class="nav-item nav-link" href="/team/register">Team Registration</a>
-            <a sec:authorize="hasAuthority('ROLE_DATA')" class="nav-item nav-link" href="/data/entry">Data Entry</a>
-            <a sec:authorize="hasAuthority('ROLE_DATA')" class="nav-item nav-link" href="/data/teamranks">Team Leaderboards</a>
-            <!--<a sec:authorize="hasAuthority('ROLE_ADMIN')" class="nav-item nav-link" href="/admin/settings">Admin Page</a>-->
-            <a sec:authorize="hasAuthority('ROLE_ADMIN')" class="nav-item nav-link" href="/h2/">Database Access</a>
+            <a sec:authorize="hasAuthority('ROLE_TEAM')" class="nav-item nav-link" th:href="@{/team/register}">Team
+                Registration</a>
+            <a sec:authorize="hasAuthority('ROLE_DATA')" class="nav-item nav-link" th:href="@{/data/entry}">Data
+                Entry</a>
+            <a sec:authorize="hasAuthority('ROLE_DATA')" class="nav-item nav-link" th:href="@{/data/teamranks}">Team
+                Leaderboards</a>
+            <a sec:authorize="hasAuthority('ROLE_ADMIN')" class="nav-item nav-link" th:href="@{/h2/}">Database
+                Access</a>
             <div sec:authorize="isAuthenticated()">
                 <form th:action="@{/logout}" method="post" class="form-inline my-0">
                     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-                    <button class="nav-item nav-link" type="submit">Log Out</button>
+                    <button type="submit" class="btn btn-light">Log Out</button>
                 </form>
             </div>
             <div sec:authorize="!isAuthenticated()">
-                <form action="/login" class="form-inline my-0">
-                    <button class="nav-item nav-link" type="submit">Log In</button>
+                <form th:action="@{/login}" method="post" class="form-inline my-0">
+                    <button type="submit" class="btn btn-light">Log In</button>
                 </form>
             </div>
         </div>
     </nav>
-</div >
+</div>
