--- a/src/main/resources/templates/downloads.html
+++ b/src/main/resources/templates/downloads.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="common/header :: common-header"/>
+<div th:replace="common/header :: common-header"></div>
 
 <body>
-    <div th:replace="common/navbar :: common-navbar"/>
-    <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-            <h3 class="display-3">Downloads</h3>
-            <p class="lead">If downloads appear to be stuck at 100%, wait 30-60 seconds, then ask for help.</p>
-            <div class="btn-group" role="group" aria-label="Utility Downloads">
-                <a type="button" class="btn btn-warning-outline" href="/files/eclipse.exe" download>Eclipse</a>
-                <a type="button" class="btn btn-warning-outline" href="/files/intellij.exe" download>IntelliJ</a>
-                <a type="button" class="btn btn-warning-outline" href="/files/jdk.exe" download>Java 8</a>
-                <a type="button" class="btn btn-warning-outline" href="/files/pc2.zip" download>PC<sup>2</sup></a>
-                <a type="button" class="btn btn-warning-outline" href="/files/dryrun.pdf" download>DryRun</a>
-                <a type="button" class="btn btn-warning-outline" href="/files/dryrun.dat" download>DryRun Data</a>
-            </div>
-            <div class="btn-group" role="group" aria-label="Contest Downloads">
-                <a type="button" class="btn btn-warning-outline" href="/files/contestpacket.pdf" download>Contest</a>
-                <a type="button" class="btn btn-warning-outline" href="/files/contestdata.zip" download>Contest Data</a>
-                <a type="button" class="btn btn-warning-outline" href="/files/writtentest.pdf" download>Written Test</a>
-                <a type="button" class="btn btn-warning-outline" href="/files/writtenkey.rar" download>Test Key</a>
-            </div>
+<div th:replace="common/navbar :: common-navbar"></div>
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+        <h3 class="display-3">Downloads</h3>
+        <p class="lead">If downloads appear to be stuck at 100%, wait 30-60 seconds, then ask for help.</p>
+        <div class="btn-group" role="group" aria-label="Utility Downloads">
+            <a class="btn btn-info" th:href="@{/files/eclipse.exe}" download>Eclipse</a>
+            <a class="btn btn-info" th:href="@{/files/intellij.exe}" download>IntelliJ</a>
+            <a class="btn btn-info" th:href="@{/files/jdk.exe}" download>Java 8</a>
+            <a class="btn btn-info" th:href="@{/files/pc2.zip}" download>PC<sup>2</sup></a>
+            <a class="btn btn-info" th:href="@{/files/dryrun.pdf}" download>DryRun</a>
+            <a class="btn btn-info" th:href="@{/files/dryrun.dat}" download>DryRun Data</a>
+        </div>
+        <div class="btn-group" role="group" aria-label="Contest Downloads">
+            <a class="btn btn-info" th:href="@{/files/contestpacket.pdf}" download>Contest</a>
+            <a class="btn btn-info" th:href="@{/files/contestdata.zip}" download>Contest Data</a>
+            <a class="btn btn-info" th:href="@{/files/writtentest.pdf}" download>Written Test</a>
+            <a class="btn btn-info" th:href="@{/files/writtenkey.rar}" download>Test Key</a>
         </div>
     </div>
+</div>
 </body>
 </html>
