--- a/src/main/resources/templates/indiranks.html
+++ b/src/main/resources/templates/indiranks.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head th:replace="common/header :: common-header"/>
+<div th:replace="common/header :: common-header"></div>
 
 <body>
-<div th:replace="common/navbar :: common-navbar"/>
+<div th:replace="common/navbar :: common-navbar"></div>
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
         <h3 class="display-3">Individual Leaderboards</h3>
