--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,33 +1,36 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 
-<head>
-    <div th:include="common/header :: common-header" th:remove="tag"/>
-    <link href="../static/css/data.css" rel="stylesheet" th:href="@{/css/data.css}"/>
-</head>
+<div>
+    <div th:include="common/header :: common-header" th:remove="tag"></div>
+    <link rel="stylesheet" th:href="@{/css/data.css}"/>
+</div>
 
 <body>
-    <div th:replace="common/navbar :: common-navbar"/>
+<div th:replace="common/navbar :: common-navbar"></div>
 
-    <div th:if="${param.logout}">
-        <p class="text-center mb-0">You have been logged out.<p>
+<div th:if="${param.logout}">
+    <p class="text-center mb-0">You have been logged out.
+    <p>
+</div>
+<form th:action="@{/login}" method="post" class="form-data">
+    <h1 class="h3 font-weight-normal text-center">Please Login</h1>
+    <div th:if="${param.error}">
+        <p class="text-center mb-0 text-danger">Invalid username and password.</p>
     </div>
-    <form th:action="@{/login}" method="post" class="form-data">
-        <h1 class="h3 font-weight-normal text-center">Please Login</h1>
-        <div th:if="${param.error}">
-            <p class="text-center mb-0 text-danger">Invalid username and password.</p>
-        </div>
-        <div class="form-group">
-            <label for="username">Username</label>
-            <input type="text" class="form-control" id="username" name="username" placeholder="Username" required="required" autofocus="autofocus">
-        </div>
-        <div class="form-group">
-            <label for="password">Password</label>
-            <input type="password" class="form-control" id="password" name="password" placeholder="Password" required="required">
-        </div>
-        <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Log In</button>
-    </form>
+    <div class="form-group">
+        <label for="username">Username</label>
+        <input type="text" class="form-control" id="username" name="username" placeholder="Username" required="required"
+               autofocus="autofocus">
+    </div>
+    <div class="form-group">
+        <label for="password">Password</label>
+        <input type="password" class="form-control" id="password" name="password" placeholder="Password"
+               required="required">
+    </div>
+    <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Log In</button>
+</form>
 </body>
 
 
