--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -14,6 +14,7 @@
     <title>SLHS UIL Comp Sci Contest</title>
 
     <link rel="stylesheet" th:href="@{/css/bootstrap.css}"/>
-    <script th:src="@{/js/bootstrap.js}"></script>
-    <script th:src="@{/js/jkirby.js}"></script>
+    <script type="text/javascript" th:src="@{/js/jquery-3.2.1.slim.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/popper.min.js}"></script>
+    <script type="text/javascript" th:src="@{/js/bootstrap.min.js}"></script>
 </head>
