--- a/src/main/resources/templates/team/register.html
+++ b/src/main/resources/templates/team/register.html
@@ -39,7 +39,7 @@
     </div>
 
     <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Log In</button>
+    <button class="btn btn-lg btn-primary btn-block" type="submit">Register</button>
 </form>
 </body>
 </html>
